Update PageControllerTest.java